manifests/scoreserver/dev.generated.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scoreserver
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: valkey
  name: valkey
  namespace: scoreserver
spec:
  clusterIP: None
  ports:
  - name: valkey
    port: 6379
    targetPort: valkey
  selector:
    app.kubernetes.io/component: valkey
    app.kubernetes.io/name: valkey
    app.kubernetes.io/part-of: valkey
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: valkey
  name: valkey-proxy
  namespace: scoreserver
spec:
  ports:
  - name: valkey
    port: 6379
    targetPort: valkey
  selector:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: valkey-proxy
    app.kubernetes.io/part-of: valkey
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/part-of: valkey
  name: valkey-sentinel
  namespace: scoreserver
spec:
  clusterIP: None
  ports:
  - name: sentinel
    port: 26379
    targetPort: sentinel
  selector:
    app.kubernetes.io/component: sentinel
    app.kubernetes.io/name: valkey-sentinel
    app.kubernetes.io/part-of: valkey
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-pin
  namespace: scoreserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secret-pin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secret-pin
    spec:
      containers:
      - image: registry.k8s.io/pause:3.10.1
        imagePullPolicy: IfNotPresent
        name: pause
        resources:
          limits:
            cpu: 2m
            memory: 10Mi
          requests:
            cpu: 1m
            memory: 1Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /run/scoreserver-admin-oauth-client
          name: scoreserver-admin-oauth-client
          readOnly: true
      securityContext:
        fsGroup: 10002
        runAsGroup: 10002
        runAsNonRoot: true
        runAsUser: 10002
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: scoreserver-admin-oauth-client
        name: scoreserver-admin-oauth-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: proxy
    app.kubernetes.io/name: valkey-proxy
    app.kubernetes.io/part-of: valkey
  name: valkey-proxy
  namespace: scoreserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/name: valkey-proxy
      app.kubernetes.io/part-of: valkey
  template:
    metadata:
      labels:
        app.kubernetes.io/component: proxy
        app.kubernetes.io/name: valkey-proxy
        app.kubernetes.io/part-of: valkey
    spec:
      containers:
      - image: haproxy:3.3.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /healthz
            port: healthz
          initialDelaySeconds: 5
          periodSeconds: 3
        name: haproxy
        ports:
        - containerPort: 8888
          name: healthz
        - containerPort: 6379
          name: valkey
        - containerPort: 9101
          name: stats
        readinessProbe:
          httpGet:
            path: /healthz
            port: healthz
          initialDelaySeconds: 5
          periodSeconds: 3
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 10m
            memory: 80Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /usr/local/etc/haproxy
          name: config
          readOnly: true
      securityContext:
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: valkey
      volumes:
      - configMap:
          items:
          - key: haproxy.cfg
            path: haproxy.cfg
          name: valkey-config-m67g9dkbb8
        name: config
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: valkey
    app.kubernetes.io/part-of: valkey
  name: valkey
  namespace: scoreserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: valkey
      app.kubernetes.io/name: valkey
      app.kubernetes.io/part-of: valkey
  serviceName: valkey
  template:
    metadata:
      labels:
        app.kubernetes.io/component: valkey
        app.kubernetes.io/name: valkey
        app.kubernetes.io/part-of: valkey
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: valkey
                  app.kubernetes.io/name: valkey
                  app.kubernetes.io/part-of: valkey
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - valkey-server
        - /var/lib/valkey/valkey.conf
        - --maxmemory
        - $(MEM_REQUEST_BYTES)
        - --replica-announce-ip
        - $(POD_NAME).$(SERVICE_NAME).$(POD_NAMESPACE).svc.cluster.local
        image: valkey/valkey:9.0.0-trixie
        livenessProbe:
          exec:
            command:
            - valkey-cli
            - ping
          initialDelaySeconds: 30
          periodSeconds: 10
        name: valkey
        ports:
        - containerPort: 6379
          name: valkey
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - valkey-cli
            - ping
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /etc/valkey
          name: config
          readOnly: true
        - mountPath: /var/lib/valkey
          name: data
      securityContext:
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: valkey
      volumes:
      - configMap:
          items:
          - key: valkey.conf
            path: valkey.conf
          name: valkey-config-m67g9dkbb8
        name: config
  volumeClaimTemplates:
  - metadata:
      labels:
        app.kubernetes.io/part-of: valkey
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: topolvm-provisioner
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/component: sentinel
    app.kubernetes.io/name: valkey-sentinel
    app.kubernetes.io/part-of: valkey
  name: valkey-sentinel
  namespace: scoreserver
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: sentinel
      app.kubernetes.io/name: valkey-sentinel
      app.kubernetes.io/part-of: valkey
  serviceName: valkey-sentinel
  template:
    metadata:
      labels:
        app.kubernetes.io/component: sentinel
        app.kubernetes.io/name: valkey-sentinel
        app.kubernetes.io/part-of: valkey
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/component: sentinel
                  app.kubernetes.io/name: valkey-sentinel
                  app.kubernetes.io/part-of: valkey
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - command:
        - valkey-sentinel
        - /data/sentinel.conf
        - --sentinel
        - announce-ip
        - $(POD_NAME).$(SERVICE_NAME).$(NAMESPACE).svc.cluster.local
        image: valkey/valkey:9.0.0-trixie
        livenessProbe:
          exec:
            command:
            - valkey-cli
            - -p
            - "26379"
            - ping
          initialDelaySeconds: 30
          periodSeconds: 10
        name: sentinel
        ports:
        - containerPort: 26379
          name: sentinel
        readinessProbe:
          exec:
            command:
            - valkey-cli
            - -p
            - "26379"
            - ping
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 10m
            memory: 10Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /etc/valkey
          name: config
          readOnly: true
        - mountPath: /data
          name: data
      securityContext:
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: valkey
      volumes:
      - configMap:
          items:
          - key: sentinel.conf
            path: sentinel.conf
          name: valkey-config-m67g9dkbb8
        name: config
  volumeClaimTemplates:
  - metadata:
      labels:
        app.kubernetes.io/part-of: valkey
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 100Mi
      storageClassName: topolvm-provisioner
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: postgres
  namespace: scoreserver
spec:
  endpointSelector:
    matchLabels:
      cnpg.io/cluster: postgres
  ingress:
  - fromEndpoints:
    - matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
        - backend
        - migrate
    toPorts:
    - ports:
      - port: postgresql
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/part-of: valkey
  name: valkey
  namespace: scoreserver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
  ingress:
  - fromEndpoints:
    - matchExpressions:
      - key: app.kubernetes.io/part-of
        operator: In
        values:
        - valkey
      - key: app.kubernetes.io/component
        operator: In
        values:
        - valkey
        - sentinel
        - proxy
    - matchLabels:
        app.kubernetes.io/name: scoreserver-backend
    toPorts:
    - ports:
      - port: valkey
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/part-of: valkey
  name: valkey-proxy
  namespace: scoreserver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: proxy
      app.kubernetes.io/name: valkey-proxy
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: scoreserver-backend
    toPorts:
    - ports:
      - port: valkey
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  labels:
    app.kubernetes.io/part-of: valkey
  name: valkey-sentinel
  namespace: scoreserver
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: sentinel
      app.kubernetes.io/name: valkey-sentinel
  ingress:
  - fromEndpoints:
    - matchExpressions:
      - key: app.kubernetes.io/part-of
        operator: In
        values:
        - valkey
      - key: app.kubernetes.io/component
        operator: In
        values:
        - sentinel
    toPorts:
    - ports:
      - port: sentinel
        protocol: TCP
